# PatriconID

./: .gitignore  ENHANCEMENT_COMPLETE.md  FRONTEND_REDESIGN.md  IMPLEMENTATION_GUIDE.md  README.md  REDESIGN_PROPOSAL.md  UI_ENHANCEMENTS.md  WEB3_COSMIC_UI_COMPLETE.md  WEB3_INTEGRATION_COMPLETE.md
circuits/: CIRCUITS_FIX_README.md  Nargo.toml
circuits/p2p_selective_disclosure/: Nargo.toml
circuits/p2p_selective_disclosure/src/: main.nr
circuits/src/: main.nr  p2p_selective_disclosure.nr
circuits/text_identity_proof/: Nargo.toml
circuits/text_identity_proof/src/: main.nr
contracts/: DEPLOYMENT.md  Makefile  foundry.toml
contracts/script/: DeployIdentityProofFactory.s.sol  DeployP2PIdentityRegistry.s.sol
contracts/src/: IdentityProofFactory.sol  P2PIdentityRegistry.sol
contracts/test/: P2PIdentityRegistryDeployment.t.sol
core/: Cargo.toml
core/src/: aadhaar_xml_parser.rs  identity_input.rs  lib.rs  p2p_service.rs
docs/: P2P_IMPLEMENTATION_GUIDE.md
js/: package-lock.json  package.json  tsconfig.json
js/src/: crypto-utils.ts  identity-verifier.ts  index.ts  p2p-proof-service.ts  storage-manager.ts
scripts/: build.sh
web/: index.html  package-lock.json  package.json  standalone-glassmorphism-demo.html  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  celestia-theme.css  index.css  main.tsx
web/src/components/: AadhaarXMLUpload.tsx  CelestiaComponents.tsx  CelestiaHero.tsx  EnhancedP2PProofGenerator.example.tsx  P2PProofGenerator.tsx  P2PProofVerifier.tsx  PageWrapper.tsx  PatriconHero.tsx  TextIdentityInput.tsx  (+2 more)
(+15 files in other folders)
