[package]
name = "patriconid-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
rsa = "0.9"
base64 = "0.21"
hex = "0.4"

# XML parsing
xml-rs = "0.8"

# ZIP handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Date/Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Maximum optimization
